@@ -6639,3 +6639,10 @@ PACKAGE: 2.2.99.2
  * Added Microsoft Excel document format, fixing #3217
  * Using a pin with content twice will no longer repeat content, fixing #3027
 
+2008-01-22 tdb
+ * Added handler to test data import tool, fixing #3241
+ * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
+ * Allow date/datetime search terms to include a time component
+ * Modified oai interface to support seconds granularity, fixing #3227 in a
+    different way
+
